added line 137 and 138

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,8 @@ legend{
     text-align: center;
     padding: 20%;
     display: block;
+    border: 3px solid red;
+    background-color: gray;
   }
   input[type = checkbox]{
     padding: 20%;
