--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,11 @@ input[type=password] {
   height: 55%;
   font-size: 80%;
   text-align: center;
-  vertical-align: middle;
+  margin: 8px, 0;
 }
 input[type = checkbox]{
   padding-bottom: 20%;
+  margin: 8px, 0;
 }
 footer{
   text-align: center;
